<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <data>
        <variable
            name="fragmetSearchOptions"
            type="com.android.recipeapp.ui.fragments.SearchOptionsFragment" />
    </data>

<androidx.constraintlayout.widget.ConstraintLayout

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EFEDED"
    tools:context=".ui.fragments.SearchOptionsFragment">

    <TextView
        android:id="@+id/mealTypeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:text="@string/meal_type_string"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:layout_marginTop="25dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textView12"
        app:layout_constraintTop_toBottomOf="@+id/dietsChipGroup" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:text="@string/calorie_kcal_string"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="22sp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />


    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/cook_time_min_string"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/optionsTitle" />

    <com.google.android.material.slider.Slider
        android:id="@+id/timeSlider"
        android:layout_width="180dp"
        android:layout_height="30dp"
        android:valueFrom="0.0"
        android:valueTo="420.0"
        android:stepSize="1.0"
        app:layout_constraintBottom_toBottomOf="@+id/textView9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toEndOf="@+id/textView9"
        app:layout_constraintTop_toTopOf="@+id/textView9" />


    <com.google.android.material.slider.RangeSlider
        android:id="@+id/calorieSlider"
        android:layout_width="180dp"
        android:layout_height="30dp"
        android:valueFrom="0.0"
        android:valueTo="1500.0"
        app:values="@array/initial_calorie_values"
        app:layout_constraintBottom_toBottomOf="@+id/textView12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toEndOf="@+id/textView9"
        app:layout_constraintTop_toTopOf="@+id/textView12" />

    <TextView
        android:id="@+id/optionsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/search_options_string"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/sortByTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/sort_by_string"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/mealTypeTitle"
        app:layout_constraintTop_toBottomOf="@+id/mealTypeChips" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/sortMenu"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense.ExposedDropdownMenu"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:background="@color/search_options_sort_background_color"
        android:layout_marginStart="30dp"
        app:layout_constraintBottom_toBottomOf="@+id/sortByTitle"
        app:layout_constraintStart_toEndOf="@+id/sortByTitle"
        app:layout_constraintTop_toTopOf="@+id/sortByTitle">

        <AutoCompleteTextView
            android:id="@+id/sortItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:inputType="none"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:textColor="@color/search_options_sort_text_color" />

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/applyOptionsButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="100dp"
        android:layout_marginTop="36dp"
        android:backgroundTint="@color/purple_500"
        android:fontFamily="@font/montserrat"
        android:text="@string/apply_string"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.545"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sortByTitle" />

    <View
        android:id="@+id/line"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginHorizontal="30dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintBottom_toTopOf="@+id/dietsChipGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <View
        android:id="@+id/line2"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="5dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dietsChipGroup" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/diet_type_string"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textView12"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/dietsChipGroup"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:singleSelection="true"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        >

        <com.google.android.material.chip.Chip
            android:id="@+id/veganChip"
            style="@style/CustomChipStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:text="@string/vegan_string"
            android:textSize="16sp"
             />

        <com.google.android.material.chip.Chip
            android:id="@+id/vegetarianChip"
            style="@style/CustomChipStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:text="@string/vegetarian_string"
            android:textSize="16sp"
             />

        <com.google.android.material.chip.Chip
            android:id="@+id/glutenFreeChip"
            style="@style/CustomChipStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:text="@string/gluten_free_string"
            android:textSize="16sp"
             />

        <com.google.android.material.chip.Chip
            android:id="@+id/ketogenicChip"
            style="@style/CustomChipStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:text="@string/ketogenic_string"
            android:textSize="16sp"
            />

        <com.google.android.material.chip.Chip
            android:id="@+id/pescetarianChip"
            style="@style/CustomChipStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:text="@string/pescetarian_string"
            android:textSize="16sp"
            />

        <com.google.android.material.chip.Chip
            android:id="@+id/paleoChip"
            style="@style/CustomChipStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:text="@string/paleo_string"
            android:textSize="16sp"
            />

    </com.google.android.material.chip.ChipGroup>

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/mealTypeChips"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:singleSelection="true"
        app:layout_constraintStart_toStartOf="@+id/mealTypeTitle"
        app:layout_constraintTop_toBottomOf="@+id/mealTypeTitle">

        <com.google.android.material.chip.Chip
            android:id="@+id/mainCourseChip"
            style="@style/CustomChipStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:text="@string/main_course_string"
            android:textSize="16sp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/breadChip"
            style="@style/CustomChipStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:text="@string/bread_string"
            android:textSize="16sp" />

        <com.google.android.material.chip.Chip
        android:id="@+id/breakfastChip"
        style="@style/CustomChipStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:text="@string/breakfast_string"
        android:textSize="16sp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/sideDishChip"
            style="@style/CustomChipStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:text="@string/side_dish_string"
            android:textSize="16sp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/soupChip"
            style="@style/CustomChipStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:text="@string/soup_string"
            android:textSize="16sp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/dessertChip"
            style="@style/CustomChipStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:text="@string/dessert_string"
            android:textSize="16sp" />
        <com.google.android.material.chip.Chip
            android:id="@+id/saladChip"
            style="@style/CustomChipStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:text="@string/salad_string"
            android:textSize="16sp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/appetizerChip"
            style="@style/CustomChipStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:text="@string/appetizer_string"
            android:textSize="16sp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/beverageChip"
            style="@style/CustomChipStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:text="@string/beverage_string"
            android:textSize="16sp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/sauceChip"
            style="@style/CustomChipStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:text="@string/sauce_string"
            android:textSize="16sp" />

    </com.google.android.material.chip.ChipGroup>


    <View
        android:id="@+id/line3"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginHorizontal="30dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mealTypeChips" />

    <View
        android:id="@+id/line4"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginHorizontal="30dp"
        android:background="@android:color/darker_gray"

        app:layout_constraintBottom_toTopOf="@+id/mealTypeChips"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mealTypeTitle" />





</androidx.constraintlayout.widget.ConstraintLayout>

</layout>